Corregir problemas de versión portable y mejorar funcionalidad
 CAMBIOS PRINCIPALES:
- Implementar instancia única en AgendaAct.java para evitar múltiples ejecuciones
- Mejorar detección de ejecutables en SistemaBandeja.java para versión portable
- Corregir función de 'ejecutar al inicio' para ambas versiones (standalone y portable)
- Crear archivo VBS sin consola para versión portable (DeskAgenda-SinConsola.vbs)
- Modificar BAT portable para ejecución minimizada sin pause
- Proteger RepositorioJSON.java en .gitignore contra cambios accidentales

 MEJORAS TÉCNICAS:
- Usar ProcessBuilder en lugar de Runtime.exec() para mejor manejo de registros Windows
- Priorizar archivos VBS sobre BAT para ejecución sin consola
- Agregar logs de debug detallados para troubleshooting
- Reorganizar scripts de construcción en carpeta 'crear ejecutables'

 FUNCIONALIDADES VERIFICADAS:
- Registro en Windows startup funciona en ambas versiones
- Instancia única previene múltiples ejecuciones
- Versión portable ahora ejecuta sin ventana de consola molesta
- Guardado/carga de tareas funciona correctamente
- Botón de marcar tareas opera sin problemas